2009-07-21  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/data/postgresql.py:
	Report column and table name in DBException dialog for unknown column type..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	One more fix of the last commit (browse form links)..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Fixed invalid syntax in the previous commit..

2009-07-21  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Pass hidden field values also to browse form control links..

2009-07-20  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Allow key search also in web forms without paging limit..

2009-07-20  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/util.py:
	Print attribute values, not their accessors, in Structure.__str__.

2009-07-17  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Allow overriding duplicit menu order check for more complicated menu structures..

2009-07-17  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Omit the edited record when checking for duplicit order..

2009-07-16  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/cms/web.py:
	PYTIS CMS: Added possibility to authenticate against LDAP style passwords..

2009-07-16  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/cms.py:
	Pytis CMS: Fixed check for duplicit order at the same level..

2009-07-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/postgresql.py:
	Escape backslashes in PostgreSQL backend.

2009-07-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	Print debug information about enabled menu items.

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Fixes of typos in has_access docstring.

2009-04-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Raise DBSystemException instead of DBException on database connection failure.
