@@ -1,3 +1,8 @@
+2009-07-28  Tomas Cerha  <cerha@brailcom.org>
+
+	* lib/pytis/data/postgresql.py:
+	Allow aggregation functions MIN and MAX also on string and date/time columns..
+
 2009-07-21  Pavel Hanak  <hanak@wpb.cz>
 
 	* lib/pytis/data/postgresql.py:
